--- a/src/ui/src/assets/variables.scss
+++ b/src/ui/src/assets/variables.scss
@@ -9,3 +9,14 @@ $gray600: #4A5568;
 $gray700: #2D3748;
 $gray800: #1A202C;
 $gray900: #171923;
+
+$good-fg: #87c13c;
+$moderate-fg: #8c6c1d;
+$unhealthy-fg: #942431;
+
+$good-bg: #a8e05f;
+$moderate-bg: #fdd64b;
+$unhealthy-bg: #fe6a69;
+
+
+$content-width: 700px;
