dev: minor style tweaks

--- a/src/ui/src/assets/variables.scss
+++ b/src/ui/src/assets/variables.scss
@@ -10,7 +10,7 @@ $gray700: #2D3748;
 $gray800: #1A202C;
 $gray900: #171923;
 
-$good-fg: #87c13c;
+$good-fg: #607631;
 $moderate-fg: #8c6c1d;
 $unhealthy-fg: #942431;
 
@@ -18,5 +18,5 @@ $good-bg: #a8e05f;
 $moderate-bg: #fdd64b;
 $unhealthy-bg: #fe6a69;
 
-
-$content-width: 700px;
+$min-content-width: 500px;
+$max-content-width: 700px;
