--- a/src/ui/src/assets/variables.scss
+++ b/src/ui/src/assets/variables.scss
@@ -18,5 +18,6 @@ $good-bg: #a8e05f;
 $moderate-bg: #fdd64b;
 $unhealthy-bg: #fe6a69;
 
+$header-height: 120px;
 $min-content-width: 500px;
 $max-content-width: 700px;
